upgraded react, reac-dom to 15.0.1. Changed package.json start script to start in production mode. fixed on small error in sass file.

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -22,7 +22,7 @@ body{
 
     // media query mixin, see _mixins.scss
     @include desktop {
-        background: $grey-light;;
+        background: $grey-light;
     }
 }
 
